# Signature-Forgery-Detection-Using-Siamese-Network

./: .gitignore  main.py  pyproject.toml  streamlit_app.py
post_train_nb/: grad_cam_viz.ipynb  v0.ipynb  v1.ipynb  v10.ipynb  v11.ipynb  v2.ipynb  v3.ipynb  v4.ipynb  v5.ipynb  v6.ipynb  v7.ipynb  v8.ipynb  v9.ipynb
post_train_nb/train_logs/siamese_signature/version_0/: metrics.csv
post_train_nb/train_logs/siamese_signature/version_1/: metrics.csv
post_train_nb/train_logs/siamese_signature/version_10/: metrics.csv
post_train_nb/train_logs/siamese_signature/version_11/: metrics.csv
post_train_nb/train_logs/siamese_signature/version_2/: metrics.csv
post_train_nb/train_logs/siamese_signature/version_3/: metrics.csv
post_train_nb/train_logs/siamese_signature/version_4/: metrics.csv
post_train_nb/train_logs/siamese_signature/version_5/: metrics.csv
post_train_nb/train_logs/siamese_signature/version_6/: metrics.csv
post_train_nb/train_logs/siamese_signature/version_7/: metrics.csv
post_train_nb/train_logs/siamese_signature/version_8/: metrics.csv
pre_train_nb/: data_module_sanity_check.ipynb  image_quality_checks.ipynb  raw_data_analysis.ipynb
src/: dataloader_utils.py  datamodule.py  dataset.py  inference_utils.py  model_training_pipeline.py  random_seed_utils.py  train_metrics_utils.py  ui_utils.py
src/image_quality/: analyzer.py  metrics.py  plots.py  reporter.py  thresholds.py
